--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "git:add:dist": "git add dist",
-    "build": "ncc build index.js --license licenses.txt",
+    "build": "npx ncc build index.js --license licenses.txt",
     "lint": "npx lint-staged",
     "preCommit": "npm-run-all -s build git:add:dist lint",
     "test": "echo \"Error: no test specified\" && exit 1",
